--- a/src/components/postComments/style.css
+++ b/src/components/postComments/style.css
@@ -10,3 +10,17 @@
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
 }
+#comments_content_center {
+  max-height: 90vh; /* Ensure it doesn't exceed the viewport */
+  overflow-y: auto;
+}
+
+aside {
+  max-height: calc(100vh - 200px); /* Adjust height as needed */
+  overflow-y: auto;
+}
+
+main {
+  max-height: 100%;
+  overflow-y: auto;
+}
